--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
         socket.on('mensaje',function(payload){
             console.log(payload)
         });
+        socket.on('nuevo-mensaje',function(payload){
+            console.log(payload)
+        });
     </script>
 </body>
 </html>
