--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,11 @@
         socket.on('nuevo-mensaje',function(payload){
             console.log(payload)
         });
+
+        socket.on('active-bands',function(bands){
+            console.clear()
+            console.table(bands)
+        });
     </script>
 </body>
 </html>
